<resources>
    <string name="app_name">交学教育</string>
    <string name="enter">报名</string>
    <string name="commit">确定</string>
    <string name="homework">做题</string>
    <string name="learntodrive">学车</string>
    <string name="partnertraining">陪练</string>
    <string name="manualblock">C1 (手动挡)</string>
    <string name="autoblock">C2 (自动挡)</string>
    <string name="orderCoach">教练列表</string>
    <string name="refresh">筛选</string>
    <string name="PleaseEnterTheNameOfTheCoach">请输入教练的名字</string>
    <string name="coachword">教练说</string>
    <string name="coachinfo">教练简介</string>
    <string name="PersonalInfromationActivityTitle">个人信息</string>

    <string name="head">头    像</string>
    <string name="nickname">昵    称</string>
    <string name="reallyname">真实姓名</string>
    <string name="sex">性    别</string>
    <string name="boirthday">出生年月</string>
    <string name="idINformation">报名身份信息</string>
    <string name="introduce">一句话介绍</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="SchoolRecordActivity">学车记录</string>
    <string name="OrderInformationActivity">订单详情</string>
    <string name="ChooseOrderYoutTime">选择您预约的时间</string>
    <string name="MyWalletActivity">我的钱包</string>
    <string name="NoticeActivity">我的消息</string>
    <string name="NoticeActivityClearNotice">清空消息</string>
    <string name="textviewNothing">清空消息,真干净</string>
    <!--   LoginActivity-->
    <string name="LoginActivityRemind">为了方便教练及时联系您,请验证手机</string>
    <string name="LoginActivity">登陆</string>
    <string name="LoginNvitationCode">请输入您的邀请码</string>
    <string name="LoginPhoneCode">请输入您的手机号码</string>
    <string name="LoginVerificationCode">验证码</string>
    <string name="LoginCommit">立即登陆</string>


    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>


</resources>
