<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:orientation="horizontal">


        <RelativeLayout
            android:id="@+id/home_rl_head"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@drawable/mine_item_background">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp3"
                android:src="@mipmap/business_head_ico2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/app_name"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_rl_message_note"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@drawable/mine_item_background">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp3"
                android:src="@mipmap/message_logo2" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp3"
        android:paddingTop="@dimen/dp3">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"


            >

            <RadioButton
                android:id="@+id/home_btn_enter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_right_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/enter"
                android:layout_marginLeft="@dimen/dp3"
                android:layout_marginRight="@dimen/dp3"
                android:textColor="@drawable/text_color_selected"

                />

            <RadioButton
                android:id="@+id/home_btn_homework"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_right_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/homework"
                android:layout_marginLeft="@dimen/dp3"
                android:layout_marginRight="@dimen/dp3"
                android:textColor="@drawable/text_color_selected"
                android:textSize="17.0sp" />

            <RadioButton
                android:id="@+id/home_btn_learntodrive"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_right_selected"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp3"
                android:layout_marginRight="@dimen/dp3"
                android:text="@string/learntodrive"
                android:textColor="@drawable/text_color_selected" />

            <RadioButton
                android:id="@+id/home_btn_partnertraining"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_right_selected"
                android:button="@null"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp3"
                android:layout_marginRight="@dimen/dp3"
                android:text="@string/partnertraining"
                android:textColor="@drawable/text_color_selected" />
        </RadioGroup>
    </RelativeLayout>

    <com.jxjycn.learntodrive.view.NoScrollViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
