<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">


    <com.baidu.mapapi.map.MapView
        android:id="@+id/ltd_mapv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp12"
        android:background="@drawable/learntodrive_relativelayout_shape"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ltd_booktime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mine_item_background">

            <ImageView
                android:id="@+id/iv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp13"
                android:src="@mipmap/alarm_clock_yellow_icon" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp13"
                android:layout_toEndOf="@+id/iv_time"
                android:layout_toRightOf="@+id/iv_time"
                android:text="@string/ChooseOrderYoutTime"
                android:textColor="@color/gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp13"
                android:src="@mipmap/app_enter_btn" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:background="@color/c_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ltd_coach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mine_item_background">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp13"
                android:src="@mipmap/people_yellow_icon" />

            <TextView
                android:id="@+id/tv_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp13"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:text="选择您预约的教练"
                android:textColor="@color/gray"

                />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp13"

                android:src="@mipmap/app_enter_btn" />

            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <RadioButton
                android:id="@+id/ltd_btn_enter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/learntodrvie_button_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/manualblock"
                android:textColor="@drawable/learntodrive_fragment_text_color_selected" />

            <RadioButton
                android:id="@+id/ltd_btn_homework"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/learntodrvie_button_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/autoblock"
                android:textColor="@drawable/learntodrive_fragment_text_color_selected"
                android:textSize="17.0sp" />

        </RadioGroup>
    </LinearLayout>



    <View
        android:id="@+id/iv_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/ltd_iv_center"
        android:layout_width="15dp"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:layout_marginBottom="1dp"
        android:src="@mipmap/icon_gcoding"
        android:layout_above="@+id/iv_center"

         />

    <Button
        android:id="@+id/ltd_btn_center"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/ltd_iv_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:textSize="@dimen/px22"
        android:background="@drawable/shape_overlay"
        android:text="_ _ _"
        android:visibility="invisible"
        android:textColor="@color/white" />


</RelativeLayout>

